fix: align footer btns

--- a/layouts/stories/meta-footer/styles.module.scss
+++ b/layouts/stories/meta-footer/styles.module.scss
@@ -61,7 +61,7 @@
 
     @media screen and (min-width: 800px) {
       margin-bottom: 0;
-      margin-left: 10px;
+      margin-left: 84px;
       margin-right: 22px;
     }
   }
@@ -86,7 +86,7 @@
 
     @media screen and (min-width: 800px) {
       margin-left: 22px;
-      margin-right: 10px;
+      margin-right: 84px;
     }
   }
 
